ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-manager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.org/websocket-services: "ant-media-server"
    nginx.ingress.kubernetes.io/websocket-services : "ant-media-server"
spec:
  tls:
  - hosts:
    - ams.vms.com
    secretName: ingress-tls
  rules:
  - host: ams.vms.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ams-service
            port:
              number: 5080
